--- a/news.html
+++ b/news.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>News | AutoCurrent</title>
+  <title>News - AutoCurrent</title>
   <link rel="stylesheet" href="style.css">
 </head>
 
@@ -13,7 +13,6 @@
       <div class="icon">
         <h2 class="logo">AutoCurrent</h2>
       </div>
-
       <div class="menu">
         <ul>
           <li><a href="index.html">HOME</a></li>
@@ -22,24 +21,8 @@
           <li><a href="contact.html">CONTACT</a></li>
         </ul>
       </div>
-
       <div class="search">
         <input type="search" placeholder="Type To Search">
         <button class="btn">Search</button>
       </div>
     </div>
-
-    <div class="content">
-      <h1>Latest <span>Automotive</span> News</h1>
-      <p class="par">
-        Explore breaking news, vehicle innovations, and the latest trends shaping the automotive industry.
-        Stay updated on electric cars, company announcements, market forecasts, and more.
-      </p>
-
-      <button class="cn"><a href="#">JOIN US</a></button>
-    </div>
-  </div>
-
-  <script src="https://unpkg.com/ionicons@5.4.0/dist/ionicons.js" ></script>
-</body>
-</html>
