--- a/news.html
+++ b/news.html
@@ -26,3 +26,38 @@
         <button class="btn">Search</button>
       </div>
     </div>
+
+   <section class="news section">
+    <h2>Latest Automotive News</h2>
+    <div class="news container"></div>
+
+    <!--Article 1-->
+    <div class="news-card">
+        <img scr="https://unsplash.com/photos/blue-bmw-m-3-parked-near-white-building-uwUnukH7a_M" alt="EV News">
+        <h3>EV</h3>
+        <p></p>
+
+        <a href="https://www.ft.com/content/1525d7a1-d242-4010-9a33-90f599cddbe9" target="_blank">Read More</a>
+    </div>
+
+    <!--Article 2-->
+    <div class="news-card">
+        <img src="https://unsplash.com/photos/a-car-that-is-sitting-in-the-street-PkKsHQ5u4g8" alt="Self Driving">
+
+        <h3></h3>
+        <p></p>
+
+        <a href="https://www.shareable.net/a-self-driving-future-at-the-intersection-of-driverless-cars-and-car-sharing/?gad_source=1&gad_campaignid=12354142069&gbraid=0AAAAACa6yNy5WX0s66Z9K_bdIiSTJhEqN&gclid=CjwKCAjwuIbBBhBvEiwAsNypvT9F93vocfP6LNSGNvivq6MIl6kjp3Yn5TjLcukq2K8BC9DhBoaVnRoCylsQAvD_BwE" target="_blank">Read More</a>
+    </div>
+
+     <!--Article 3-->
+    <div class="news-card">
+        <img src="https://unsplash.com/photos/a-car-that-is-sitting-in-the-street-PkKsHQ5u4g8" alt="Factory Production">
+
+        <h3></h3>
+        <p></p>
+
+        <a href="https://www.autonews.com/manufacturing/an-trump-tariffs-us-production-moves-0428/" target="_blank">Read More</a>
+    </div>
+
+   </section>
